# tethys

./: .build.yml  .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  fizzbuzz.tys  paper.tex  prelude.tys  tmp.ir-tree  tmp.tys  tychk_nbe.ml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
Notes/: .ztr-directory  20220506204442.md  20220506205025.md  20220509195321.md  20220509195813.md  temporary.md
highlight/: package.json  tethys-lang-0.0.1.vsix
highlight/syntaxes/: tethys.tmLanguage.json
paper/: Makefile  biblio.bib  paper.tex
src/: ast.rs  ctxt.rs  diag.rs  error.rs  eval.rs  infer.rs  intern.rs  lib.rs  main.rs  parse.rs  resolve.rs
src/ast/: mod.rs  pretty.rs
src/codegen/: closure.rs  constant_prop.rs  dead_code.rs  ir.rs  llvm.rs  mod.rs  ssa.rs
src/eval/: pretty.rs
src/ir/: index.rs  map.rs  mod.rs
src/lowering/: mod.rs
src/parse/: ast.rs  mod.rs
src/resolve/: ast.rs  mod.rs
src/typeck/: ast.rs  facade.rs  mod.rs  norm.rs  pretty.rs  unify.rs
src/typeck/facade/: traversal.rs
support/: README.md  prelude.tys  testing.tys  tethys-mode.el  typeck.ml
support/highlight/: language-configuration.json
support/highlight/syntaxes/: tethys.tmLanguage.json
support/tests/resolve/: tyvar-scope-1.tys  tyvar-scope-2.tys  tyvar-scope-3.tys  tyvar-scope-4.tys  tyvar-scope-5.tys  tyvar-scope-6.tys
support/typeck/: dune-project  typeck.opam
support/typeck/lib/: dune  typeck.ml
support/typeck/test/: dune
support/vim-tethys/: README.md  hello.tys
support/vim-tethys/ftdetect/: tethys.vim
support/vim-tethys/syntax/: tethys.vim
