[package]
name = "tethys"
version = "0.1.0"
edition = "2021"

[dependencies]
typed-arena = "2.0.1"
chumsky = "0.7.0"
ariadne = "0.1.3"
logos = "0.12.0"
color-eyre = "0.5.11"
tracing-subscriber = { version = "0.3.3", features = ["parking_lot", "env-filter", "time"] }
tracing = { version = "0.1.29", features = ["max_level_trace", "release_max_level_info"] }
derive_more = "0.99.17"
pretty = "0.11.2"
hashbrown = "0.11.2"
index_vec = "0.1.3"

[dependencies.calypso_base]
git = "https://github.com/calypso-lang/calypso.git"
rev = "fe9c168"
default-features = false
features = ["span", "symbol"]