[package]
name = "tethys"
version = "0.1.0"
edition = "2021"
default-run = "tethys"

[dependencies]
typed-arena = "2.0.1"
chumsky = "0.8.0"
ariadne = "0.1.5"
logos = "0.12.0"
derive_more = "0.99.17"
pretty = "0.11.3"
hashbrown = "0.12.0"
index_vec = "0.1.3"
thiserror = "1.0.30"
eyre = "0.6.8"

[dependencies.calypso_base]
git = "https://github.com/calypso-lang/calypso.git"
rev = "fe9c168"
default-features = false
features = ["span", "symbol"]

[dependencies.color-eyre]
version = "0.6.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.11"
optional = true
features = ["parking_lot", "env-filter", "time"]

[dependencies.tracing]
version = "0.1.34"
features = ["max_level_trace", "release_max_level_info"]

[dependencies.serde]
version = "1.0.133"
optional = true
features = ["derive"]

[dependencies.serde_yaml]
version = "0.8.23"
optional = true

[dependencies.clap]
version = "3.1.12"
optional = true
features = ["color", "derive"]

[dependencies.walkdir]
version = "2.3.2"
optional = true

[dependencies.indicatif]
version = "0.16.2"
optional = true

[features]
default = ["tethys-deps"]
tethys-deps = [
    "color-eyre",
    "tracing-subscriber"
]
uitest-deps = [
    "color-eyre",
    "tracing-subscriber",
    "serde",
    "serde_yaml",
    "clap",
    "walkdir",
    "indicatif"
]

[[bin]]
name = "tethys"
path = "src/bin/tethys.rs"
required-features = ["tethys-deps"]

[[bin]]
name = "uitest"
path = "src/bin/uitest/main.rs"
required-features = ["uitest-deps"]