[package]
name = "tethys"
version = "0.1.0"
edition = "2021"
default-run = "tethys"
rust-version = "1.66.1"

[dependencies]
ariadne = "0.2.0"
logos = "0.12.1"
derive_more = "0.99.17"
pretty = "0.11.3"
index_vec = "0.1.3"
thiserror = "1.0.37"
eyre = "0.6.8"
stable-vec = "0.4.0"
internment = "0.7.0"
id-arena = "2.2.1"
im = "15.1.0"
chumsky = "1.0.0-alpha.2"

[dependencies.calypso_base]
git = "https://github.com/calypso-lang/calypso.git"
rev = "fe9c168"
default-features = false
features = ["span", "symbol"]

[dependencies.color-eyre]
version = "0.6.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.16"
optional = true
features = ["parking_lot", "env-filter", "time"]

[dependencies.tracing]
version = "0.1.37"
features = ["max_level_trace", "release_max_level_info"]

[dependencies.serde]
version = "1.0.147"
optional = true
features = ["derive"]

[dependencies.serde_yaml]
version = "0.9.14"
optional = true

[dependencies.clap]
version = "4.2.2"
optional = true
features = ["color", "derive"]

[dependencies.walkdir]
version = "2.3.2"
optional = true

[dependencies.indicatif]
version = "0.16.2"
optional = true

[dependencies.tower-lsp]
version = "0.19.0"
optional = true

[dependencies.tokio]
version = "1.21.2"
optional = true
features = ["full"]

[features]
default = ["tethys-deps"]
tethys-deps = [
    "color-eyre",
    "tracing-subscriber"
]
uitest-deps = [
    "color-eyre",
    "tracing-subscriber",
    "serde",
    "serde_yaml",
    "clap",
    "walkdir",
    "indicatif"
]
debug-lsp-deps = [
    "color-eyre",
    "tracing-subscriber",
    "tower-lsp",
    "tokio"
]

[[bin]]
name = "tethys"
path = "src/bin/tethys.rs"
required-features = ["tethys-deps"]

[[bin]]
name = "uitest"
path = "src/bin/uitest/main.rs"
required-features = ["uitest-deps"]

[[bin]]
name = "debug-lsp"
path = "src/bin/debug-lsp/main.rs"
required-features = ["debug-lsp-deps"]
